--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <script src="/static/css/flat.css"></script>
     <link rel="icon" type="image/x-icon" href="/static/images/Icon.jpg">
     <link rel="stylesheet" href="/static/css/custome.css">
-    <script src="jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="select2.min.css" integrity="sha512-nMNlpuaDPrqlEls3IX/Q56H36qvBASwb3ipuo3MxeWbsQB1881ox0cRv7UPTgBlriqoynt35KjEwgGUeUXIPnw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js" integrity="sha512-2ImtlRlf2VVmiGZsjm9bEyhjGW4dU7B6TNwh/hx/iSByxNENtj3WVE6o/9Lj4TJeVXPi4bnOIMXFIJJAeufa0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="jquery-3.7.0.min.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="select2.min.css"  />
+    <script src="select2.min.js"></script>
 
     <title>Hiretutorhub | Welcome</title>
     
 
-<link rel="stylesheet" href="/static/css/dist/styles.css">
+<link rel="stylesheet" href="/static/css/styles.css">
 
 
 
