--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content=https://www.homeworkandassignmenthelp.online property=og:url>
+    <meta name="keywords" content="
+					homework, assignment, and, help, online		">
+    
+    <meta name="description" content="	
+    We provide assistance with assignments across a diverse array of subjects, encompassing the sciences, business, computer science, engineering, intricate problem-solving, humanities, and beyond.			">
+
+    <meta content=origin name=referrer>
+
     <script src="https://kit.fontawesome.com/003d065c33.js" crossorigin="anonymous"></script>    
     <script src="/static/css/flat.css"></script>
     <link rel="icon" type="image/x-icon" href="/static/images/Icon.jpg">    
